--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.4",
     "qr.js": "0.0.0",
     "scriptloader": "^1.1.2",
+    "ua-parser-js": "^0.7.18",
     "vue": "^2.4.2",
     "vue-awesome-swiper": "^2.6.5",
     "vue-i18n": "^7.3.0",
